--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.6"
+    "react-native": "0.69.6",
+    "@react-navigation/core": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/stack": "^6.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
