--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-native": "0.69.6",
     "@react-navigation/core": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
-    "@react-navigation/stack": "^6.3.1"
+    "@react-navigation/stack": "^6.3.1",
+    "expo-app-loading": "~2.1.0",
+    "expo-splash-screen": "~0.16.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
