--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.6"
+    "react-native": "0.69.6",
+    "react-native-stopwatch-timer": "^0.0.21"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
