--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/stack": "^6.3.1",
     "expo": "~46.0.13",
     "expo-app-loading": "~2.1.0",
-    "expo-splash-screen": "~0.16.2",
+    "expo-splash-screen": "^0.16.2",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
